# FlatCraft

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
src/: CMakeLists.txt  FlatCraft.cpp  Location.cpp  main.cpp
src/app/: Binder.cpp  Console.cpp  Launcher.cpp
src/common/: BoundingBox.cpp  EntityModel.cpp  EntityType.cpp  InventorySlot.cpp  ItemModel.cpp  Location.cpp  Material.cpp  MaterialMatrix.cpp  MaterialStack.cpp  MultiDimensionalArray.cpp  PlayerController.cpp  Random.cpp  RayTraceResult.cpp  RefPtr.cpp  Vec2d.cpp  Weather.cpp  WorldModel.cpp
src/common/material/: air.json  bedrock.json  coal_ore.json  dirt.json  grass.json  leaves.json  log.json  planks.json  stone.json  water.json
src/entity/: Entity.cpp  LivingEntity.cpp
src/entity/player/: Player.cpp  PlayerController.cpp
src/event/: Cancelable.cpp  Event.cpp  EventInstance.cpp  EventManager.cpp
src/event/instance/: EntityEvent.cpp  EntityTeleportEvent.cpp  EventInstance.cpp
src/graphics/: graph.cpp
src/item/: Inventory.cpp  Item.cpp  ItemMeta.cpp  ItemMetaDamageable.cpp  ItemStack.cpp
src/model/: FlatCraft.cpp  Location.cpp
src/model/entity/: DroppedItem.cpp  Entity.cpp  LivingEntity.cpp
src/model/event/: Cancelable.cpp  Event.cpp  EventManager.cpp  EventType.cpp  Listener.cpp
src/model/item/: Item.cpp  (+8 more)
src/scheduler/: Scheduler.cpp  Task.cpp
src/util/: BoundingBox.cpp  Location.cpp  Material.cpp  RayTraceResult.cpp  Vec2d.cpp
src/view/: DroppedItemView.cpp  EnitityView.cpp  PlayerView.cpp  WorldView.cpp  graph.cpp
src/viewmodel/: DroppedItemViewModel.cpp  EntityViewModel.cpp  PauseViewModel.cpp  PlayerModel.cpp  PlayerViewModel.cpp  ViewModel.cpp  WorldModel.cpp  WorldViewModel.cpp
src/window/: graph.cpp
src/world/: Block.cpp  BlockData.cpp  Material.cpp  World.cpp
test/: CMakeLists.txt  test.cpp
(+128 files in other folders)
